@@ -655,6 +655,7 @@ returns result for given request
 sub _req {
     my($self, $sub, $args, $redirects) = @_;
     $redirects = 0 unless defined $redirects;
+    my $skip_enc = 0;
 
     # clean code refs
     _clean_code_refs($args);
@@ -665,7 +666,10 @@ sub _req {
         'remote_name'   => $self->{'remote_name'},
         'args'          => $args,
     };
-    $options->{'auth'} = $args->{'auth'} if defined $args and ref $args eq 'HASH' and defined $args->{'auth'};
+    if(defined $args and ref $args eq 'HASH') {
+        $options->{'auth'} = $args->{'auth'}     if defined $args->{'auth'};
+        $skip_enc          = $args->{'skip_enc'} if defined $args->{'skip_enc'};
+    }
 
     my $response = _ua_post_with_timeout(
                         $self->{'ua'},
@@ -685,8 +689,13 @@ sub _req {
     }
 
     if($response->is_success) {
-        # encode content
-        my $data_str = encode_utf8($response->decoded_content);
+        # encode content, unless skipped
+        my $data_str;
+        if($skip_enc) {
+            $data_str = $response->decoded_content;
+        } else {
+            $data_str = encode_utf8($response->decoded_content);
+        }
         my $data;
         eval {
             $data = decode_json($data_str);
