@@ -1954,9 +1954,10 @@ sub _remote_do {
         $res = $self->{'remotepeer'}
                     ->{'class'}
                     ->_req('configtool', {
-                            auth => $c->stash->{'remote_user'},
-                            sub  => $sub,
-                            args => $args,
+                            auth     => $c->stash->{'remote_user'},
+                            sub      => $sub,
+                            args     => $args,
+                            skip_enc => 1,
                     });
     };
     if($@) {
@@ -1980,10 +1981,11 @@ sub _remote_do_bg {
     my $res = $self->{'remotepeer'}
                    ->{'class'}
                    ->_req('configtool', {
-                            auth => $c->stash->{'remote_user'},
-                            sub  => $sub,
-                            args => $args,
-                            wait => 1,
+                            auth     => $c->stash->{'remote_user'},
+                            sub      => $sub,
+                            args     => $args,
+                            wait     => 1,
+                            skip_enc => 1,
                     });
     die("bogus result: ".Dumper($res)) if(!defined $res or ref $res ne 'ARRAY' or !defined $res->[2]);
     return $res->[2];
