@@ -8,6 +8,7 @@ next:
           - Bug Fixes
             - summary: fixed reports using host/servicegroups in combination with the mysql logcache
             - mysql logcache: fixed service cannot be NULL error on import
+            - fixed encoding problem when using config tool over http
 
 1.76-3   Tue Sep  3 23:00:09 CEST 2013
           - new site 'collapsed' panel for large setups
